[project]
name = "onetworkrb"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "niledixon@workforcedeveloper.org"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "workrb (>=0.6.0,<0.7.0)",
    "scikit-learn (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
